--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ nav .nav-link a:hover {
   height: 48px;
   border-radius: 24px;
   border: 0;
-  background-color: var(--cyan);
+  background-image: linear-gradient(to right, var(--cyan), var(--blue));
   color: var(--white);
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -86,7 +86,11 @@ nav .nav-link a:hover {
 }
 .intro button:hover {
   cursor: pointer;
-  background-color: hsl(187, 61%, 72%);
+  background-image: linear-gradient(
+    to bottom right,
+    hsl(189, 65%, 72%),
+    hsl(186, 66%, 71%)
+  );
 }
 
 .features {
@@ -285,7 +289,7 @@ section.call-to-action form button {
   height: 48px;
   border-radius: 24px;
   border: 0;
-  background-color: var(--blue);
+  background-image: linear-gradient(to right, var(--cyan), var(--blue));
   color: var(--white);
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -293,7 +297,11 @@ section.call-to-action form button {
 }
 section.call-to-action form button:hover {
   cursor: pointer;
-  background-color: hsl(187, 61%, 72%);
+  background-image: linear-gradient(
+    to bottom right,
+    hsl(189, 65%, 72%),
+    hsl(186, 66%, 71%)
+  );
 }
 
 main footer {
@@ -549,7 +557,7 @@ footer .icon a:nth-child(3):hover {
     align-self: center;
   }
   .stay-productive h2 {
-    padding-right: 200px;
+    padding-right: 50px;
     text-align: left;
     font-family: "Raleway", sans-serif;
     font-size: 2.85em;
